crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__the_composer_of_a_room_offers_to_post_to_it.snap
---
source: crates/bingo-surface-tui/src/view.rs
expression: screen
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"in #design                                                                      "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ #design > post to the room                                                   │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts · / commands · ! shell                                          "
