crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__the_context_badge_is_plain_below_the_trigger.snap
---
source: crates/bingo-surface-tui/src/view.rs
expression: "render(&with_context(120_000), &ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│❯ ask anything · / for commands · ! for shell                                 │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts · / commands · ! shell                            fake-1 ctx 60%"
