crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__the_context_notice_sits_on_the_status_line_when_it_is_true.snap
---
source: crates/bingo-surface-tui/src/view.rs
expression: "render(&with_context(170_000), &ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                          │"
"│                                                                              │"
"│   /help for help · /login codex to use a subscription                        │"
"│   cwd: /tmp/project                                                          │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"context 85% · /compact                                                    fake-1"
