crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__the_footer_names_the_mode_the_policy_published.snap
---
source: crates/bingo-surface-tui/src/view.rs
expression: "render(&with_mode(\"acceptEdits\"), &ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│❯ ask anything · / for commands · ! for shell                                 │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"acceptEdits · ? for shortcuts · / commands · ! shell                      fake-1"
