crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__the_list_covers_the_transcript_and_moves_nothing_under_it.snap
---
source: crates/bingo-surface-tui/src/view.rs
expression: with_list
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                          │"
"│                                                                              │"
"│   /help for help · /login codex to use a subscription                        │"
"│   cwd: /tmp/project                                                          │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"> have it reviewed                                                              "
"                                                                                "
"⏺ reviewer(review the diff)                                                     "
"  ⎿  Running… 0 tools · 0 tokens                                                "
"❯ ⏺ project   have it reviewed                                                  "
"  ⏺ reviewer  running · 0 tools · 0 tokens                                      "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"1 running                                                            fake/fake-1"
