crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__the_rail_holds_the_pinned_board_and_the_live_progress_card.snap
---
source: crates/bingo-surface-tui/src/view.rs
expression: screen
---
"                                                                                                  ❯ Board               "
"                                                                                                  id  state             "
"                                                                                                  ─────────             "
"                                                                                                   1  ready             "
"                                                                                                   2  held              "
"                                                                                                  [ 1 Tick ] [ 2 Reset ]"
"                                                                                                                        "
"                                                                                                    progress            "
"                                                                                                  ████████░░ 80 % · car…"
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"╭──────────────────────────────────────────────────────────────────────────────────────────────╮                        "
"│ ✻ Welcome to bingo!                                                                          │                        "
"│                                                                                              │                        "
"│   /help for help · /login codex to use a subscription                                        │                        "
"│   cwd: /tmp/project                                                                          │                        "
"╰──────────────────────────────────────────────────────────────────────────────────────────────╯                        "
"                                                                                                                        "
"> run the board                                                                                                         "
"                                                                                                                        "
"                                                                                                                        "
"╭──────────────────────────────────────────────────────────────────────────────────────────────╮                        "
"│ > ask anything · / for commands · ! for shell                                                │                        "
"╰──────────────────────────────────────────────────────────────────────────────────────────────╯                        "
"? for shortcuts                                                                                              fake/fake-1"
