crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__the_session_picker_lists_what_can_be_resumed.snap
---
source: crates/bingo-surface-tui/src/view.rs
expression: "render(&state, &ui, now)"
---
"Resume                                                                          "
"❯ 1. fix the parser · 2023-11-14T22:13:20Z · ses_1                              "
"  2. untitled · 2023-11-14T22:13:20Z · ses_2                                    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                           fake-1"
