crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__the_status_line_names_the_mode_the_policy_published.snap
---
source: crates/bingo-surface-tui/src/view.rs
expression: "render(&with_permission_mode(\"acceptEdits\"), &ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                          │"
"│                                                                              │"
"│   /help for help · /login codex to use a subscription                        │"
"│   cwd: /tmp/project                                                          │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"⏵⏵ acceptEdits (shift+tab to cycle)            ? for shortcuts            fake-1"
