crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__the_strip_takes_the_status_lines_row_and_moves_nothing_else.snap
---
source: crates/bingo-surface-tui/src/view.rs
expression: with_strip
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                          │"
"│                                                                              │"
"│   /help for help · /login codex to use a subscription                        │"
"│   cwd: /tmp/project                                                          │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"> have it reviewed                                                              "
"                                                                                "
"⏺ reviewer(review the diff)                                                     "
"  ⎿  Running… 0 tools · 0 tokens                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"❯ ⏺ project  ⏺ reviewer                                                         "
